fix sidebar overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@ BG : FFFFFF
 body::-webkit-scrollbar {
     display: none;
   }
+.pageview{
+    width: 70% !important;
+}
+
+
+@media only screen and (max-width: 600px){
+    .pageview {
+        width: 100% !important;
+    }
+}
 /* how to use?
     property-name:var(--darkGreen);
 */
